--- a/MetalResize.app/Contents/Info.plist
+++ b/MetalResize.app/Contents/Info.plist
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleExecutable</key>
-	<string>Switcher</string>
+	<string>MetalResize</string>
 	<key>CFBundleIconFile</key>
 	<string>app</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.jason.switcher-swift</string>
+	<string>com.jason.metal-resize</string>
 	<key>CFBundleName</key>
-	<string>Switcher</string>
+	<string>MetalResize</string>
 	<key>CFBundleVersion</key>
 	<string>1.0.0</string>
 	<key>CFBundleShortVersionString</key>
